blockbuster-canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockbuster-canary
  namespace: blockbuster
  labels:
    app: blockbuster
spec:
  replicas: $CANARY_REPLICAS
  selector:
    matchLabels:
      app: blockbuster
      track: canary
  template:
    metadata:
      labels:
        app: blockbuster
        track: canary
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: blockbuster
        image: $DOCKER_IMAGE_NAME:$GIT_COMMIT
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
