blockbuster-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vg-rental
  namespace: blockbuster
  labels:
    app: vg-rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vg-rental
  template:
    metadata:
      labels:
        app: vg-rental
        track: stable
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: vg-rental
        image: eilonwy/blockbuster:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
