blockbuster-prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: blockbuster-prometheus
  namespace: ernest-kim
  labels:
    app: project-one
spec: 
    apiGroups:
    - extensions
    resources:
    - thirdpartyresources
    verbs:
    - "*"
  - apiGroups:
    - apiextensions.k8s.io
    resources:
    - customresourcedefinitions
    verbs:
    - "*"
  - apiGroups:
    - monitoring.coreos.com
    resources:
    - alertmanagers
    - prometheuses
    - prometheuses/finalizers
    - servicemonitors
    verbs:
    - "*"
  - apiGroups:
    - apps
    resources:
    - statefulsets
    verbs: ["*"]
  - apiGroups: [""]
    resources:
    - configmaps
    - secrets
    verbs: ["*"]
  - apiGroups: [""]
    resources:
    - pods
    verbs: ["list", "delete"]
  - apiGroups: [""]
    resources:
    - services
    - endpoints
    verbs: ["get", "create", "update"]
  - apiGroups: [""] 
    resources:
    - nodes
    verbs: ["list", "watch"]
  - apiGroups: [""]
    resources:
    - namespaces
    verbs: ["list"]
