project-one-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-one
  namespace: ernest-kim
  labels:
    app: project-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-one
  template:
    metadata:
      labels:
        app: project-one
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: project-one
        image: ernestk86/project-one:0.0.7
        ports:
        - containerPort: 8880
        imagePullPolicy: IfNotPresent
