RDS-external.yml
apiVersion: v1
kind: Service
metadata:
  name: rds
  namespace: blockbuster
spec:
  type: ExternalName
  externalName: us-east-2.c64uxzwp3nek.us-east-2.rds.amazonaws.com
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 8080
