blockbuster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vg-rental
  namespace: blockbuster
  labels:
    app: vg-rental
spec:
  selector:
    app: vg-rental
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
