loki-external.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: ernest-kim
spec:
  type: ExternalName
  externalName: loki.default.svc.cluster.local
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100
