prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: blockbuster
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
