blockbuster-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blockbuster
  namespace: blockbuster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /Blockbuster/?(.*)
        backend:
          serviceName: blockbuster
          # Ingress forwards request to 8880 of the service
          servicePort: 8080
