project-one-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-one
  namespace: ernest-kim
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /vgrental/?(.*)
        backend:
          serviceName: project-one
          # Ingress forwards request to 8880 of the service
          servicePort: 8880
